# hometasks

./: .gitignore  .gitmodules  LICENSE  README.md
CIFAR10_evaluation/lbp/: core.py  input.py  linear_classifier.py
CIFAR10_evaluation/tensorflow/: cifar10.py  cifar10_eval.py  cifar10_train.py
CMSC733/HW0/: Readme.txt
CMSC733/P5/: .gitignore
CMSC733/amitrokh_P1/: ReadmeFirst.txt
CMSC733/amitrokh_P2/: Readme.txt
CMSC740/nori/: CMakeLists.txt
CMSC740/report/: report.html
CompMath/brussel/: Makefile  definitions.h
CompMath/montecarlo/: CMakeLists.txt
CompMath/sparse_matrix/: eigenvalues.txt
CompMath/task_1/: task_1_manual.py
CompMath_II_term/: task_1.py
CompMath_II_term/brussel/: .gitignore  brussel.cpp
CompMath_II_term/thermal/: Makefile  thermal.cpp
CompMath_I_term/sparse_matrix/: .gitignore
Java/Molecule/: build.xml
Lunev/Assignment_13/: Makefile
Lunev/Assignment_2/: main.py
Lunev/Assignment_3/: Client.py  Computation_init.py  Server.py
MPI/convection/: Makefile  convection.cpp  run
MPI/factorial/: Makefile  factorial.cpp  run
MPI/print/: .gitignore  Makefile  print.cpp
MPI/ring/: Makefile  ring.cpp  run
MPI/sort/: Makefile  run  sort.c
OpenMP/: README.md  teleporter.sh
OpenMP/parallelize/: 4.c  5.c  6.c  Makefile  p4.c  p5.c  p6.c
OpenMP/sin/: main.cpp
OpenMP/task1/: cycle.sh  graph1.py  (+2 more)
School/: README.md
Teorphys/: graph.py
polinomial/: polinomial.py
sparse_matrix/: .gitignore  CMakeLists.txt  eigenvalues.txt  matrix.txt  precise_answers.txt
sparse_matrix/src/: main.cpp  matgen.cpp  mlib.cpp  mlib.h
(+332 files in other folders)
